Firefox is stupid. Fixed table alignment issue.

--- a/css/movie_styles.css
+++ b/css/movie_styles.css
@@ -60,6 +60,8 @@ table {
 
     margin-top: 20px;
 
+    display: inline-block;
+
     width: 900px;
 
     font-family: 'Open Sans', sans-serif;
